# openapi.yaml
@@ -3396,6 +3396,12 @@ paths:
       description: Sends a test webhook to verify endpoint connectivity
       operationId: testEndpoint
       parameters:
+      - name: projectId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
       - name: id
         in: path
         required: true
@@ -8454,8 +8460,6 @@ components:
     PageableObject:
       type: object
       properties:
-        unpaged:
-          type: boolean
         paged:
           type: boolean
         pageNumber:
@@ -8469,14 +8473,16 @@ components:
           format: int64
         sort:
           $ref: "#/components/schemas/SortObject"
+        unpaged:
+          type: boolean
     SortObject:
       type: object
       properties:
-        unsorted:
-          type: boolean
         sorted:
           type: boolean
         empty:
+          type: boolean
+        unsorted:
           type: boolean
     TunnelRequestLog:
       type: object
